add github link

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,5 +1,5 @@
 de:
-  welcome_to: "Herzlich willkommen bei"
+  welcome_to: "Herzlich Willkommen bei"
   have_a_ride: "Ich habe eine MFG anzubieten!"
   need_a_ride: "Ich suche eine MFG!"
   people_who_have_a_ride: "Leute, die eine MFG anbieten"
