--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,10 +39,11 @@ en:
 
   name: "Name"
   phone: "Phone"
-  date: "Date"
+  entry_date: "Date"
+  who: "Who"
   from: "From"
   to: "To"
-  seats: "Number of seats"
+  seats: "Seats"
   are_you_driving_youself: "Are you willing and able to drive the car yourself?"
   would_you_drive: "Would you offer to drive the car as well?"
   person_would_drive: "Would this person also drive the car?"
@@ -50,3 +51,7 @@ en:
 
   offer: "offer"
   request: "request"
+
+  time:
+    formats:
+      long: "%a, %B %d, %Y, %H:%M"
