--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -8,6 +8,7 @@ de:
   cancel: "Abbrechen"
   back: "Zurück"
   create_entry: "Eintrag anlegen"
+  contact: "Kontakt"
   send_email: "Email abschicken"
 
   bool_yes: "Ja"
