--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,8 +2,8 @@ de:
   welcome_to: "Herzlich Willkommen bei"
   have_a_ride: "Ich habe eine MFG anzubieten!"
   need_a_ride: "Ich suche eine MFG!"
-  people_who_have_a_ride: "Leute, die eine MFG anbieten"
-  people_who_need_a_ride: "Leute, die eine MFG suchen"
+  people_who_have_a_ride: "Angebote"
+  people_who_need_a_ride: "Gesuche"
   show_details: "Details anzeigen"
   cancel: "Abbrechen"
   back: "Zurück"
