--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,8 +2,8 @@ en:
   welcome_to: "Welcome to"
   have_a_ride: "I have a ride to share!"
   need_a_ride: "I need a ride!"
-  people_who_have_a_ride: "People who have a ride to share"
-  people_who_need_a_ride: "People who need a ride"
+  people_who_have_a_ride: "Offering a ride"
+  people_who_need_a_ride: "Looking for a ride"
   show_details: "Show details"
   cancel: "Cancel"
   back: "Back"
