--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -21,13 +21,13 @@ de:
   date_and_time: "Datum und Uhrzeit"
   your_start_point: "Dein Startpunkt"
   your_destination: "Dein Ziel"
-  to_contact_text: "Um %{name} zu kontaktieren, trage bitte eine Emailadresse und deine Nachricht ein."
+  to_contact_text: "Um %{name} zu kontaktieren, trage bitte eine Emailadresse und Deine Nachricht ein."
   please_complete_the_form: "Bitte trage die Details in das Formular ein. Deine Emailadresse wird nicht weitergegeben. Die Telefonnummer ist optional und für jeden sichtbar."
   your_message: "Deine Nachricht"
 
   your_offer_has_been_created: "Dein Angebot wurde gespeichert"
   your_request_has_been_created: "Dein Gesuch wurde gespeichert"
-  someone_contacted_you: "Jemand hat dich kontaktiert"
+  someone_contacted_you: "Jemand hat Dich kontaktiert"
 
   name_is_looking_for_a_ride: "%{name} sucht eine MFG"
   name_has_a_ride_to_share: "%{name} hat eine MFG anzubieten"
