--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,7 @@ en:
   seats: "Seats"
   are_you_driving_youself: "Are you willing and able to drive the car yourself?"
   would_you_drive: "Would you offer to drive the car as well?"
+  driver_needed: "This ride is still in need of a driver!"
   person_would_drive: "Would this person also drive the car?"
   notes: "Additional notes"
 
