Fix localisation of weekday and month
Closes #24

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -60,9 +60,9 @@ de:
       long: "%a, %B %d, %Y, %H:%M"
 
   date:
-    abbr_day_names: [ "Mo", "Di", "Mi", "Do", "Fr", "Sa", "So"]
-    month_names: [ "Januar", "Februar", "März", "April", "Mai", "Juni", "Juli", "August", "September", "Oktober", "November", "Dezember"]
-    abbr_month_names: [ "Jan", "Feb", "Mär", "Apr", "Mai", "Jun", "Jul", "Aug", "Sep", "Okt", "Nov", "Dez"]
+    abbr_day_names: [ "So", "Mo", "Di", "Mi", "Do", "Fr", "Sa" ]
+    month_names: [ "", "Januar", "Februar", "März", "April", "Mai", "Juni", "Juli", "August", "September", "Oktober", "November", "Dezember"]
+    abbr_month_names: [ "", "Jan", "Feb", "Mär", "Apr", "Mai", "Jun", "Jul", "Aug", "Sep", "Okt", "Nov", "Dez"]
 
   simple_form:
     yes: 'Ja'
